--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: dev
-      url: 'www.cec.com.br'
+      url: 'https://www.cec.com.br'
     needs: build
     steps:
       - name: Run a one-line script
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: hmg
-      url: 'www.cec.com.br'
+      url: 'https://www.cec.com.br'
     needs: deploy-dev
     steps:
       - name: Run a one-line script
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: prod
-      url: 'www.cec.com.br'
+      url: 'https://www.cec.com.br'
     needs: deploy-hmg
     steps:
       - name: Run a one-line script
